# application/backend/certiblock/controllers/universities.go
@@ -11,7 +11,8 @@ import (
 )
 
 func UniversitiesAPI(context *base.ApplicationContext, r *gin.RouterGroup) {
-	r.POST("/certificate-file", AddCertificateFile(context))
+	r.POST("/certificate-file/request", RequestCertificateFile(context))
+	r.POST("/certificate-file/approve", ApproveCertificateFile(context))
 	r.POST("/register", RegisterUniversity(context))
 	r.GET("/certificates/on_chain", GetCertificatesOnChain(context))
 	r.GET("/certificates/not_on_chain", GetCertificatesNotOnChain(context))
@@ -19,17 +20,48 @@ func UniversitiesAPI(context *base.ApplicationContext, r *gin.RouterGroup) {
 	r.GET("/:id", GetUniversityById(context))
 }
 
-// POST /api/universities/certificate-file
+// POST /api/universities/certificate-file/request
 // @Tags universities
-// @Summary Add a certificate file
-// @Description Add a certificate file
+// @Summary Student issue a certificate file
+// @Description Student issue a certificate file
 // @Accept json
 // @Produce json
 // @Param certificateFile body data.CertificateFileUpload true "Certificate file data"
 // @Success 201 {object} gin.H
 // @Failure 400 {object} gin.H
-// @Router /api/universities/certificate-file [post]
-func AddCertificateFile(context *base.ApplicationContext) func(c *gin.Context) {
+// @Router /api/universities/certificate-file/request [post]
+func RequestCertificateFile(context *base.ApplicationContext) func(c *gin.Context) {
+	return func(c *gin.Context) {
+		var certificateFileUpload data.CertificateFileUpload
+		if err := c.ShouldBindJSON(&certificateFileUpload); err != nil {
+			c.JSON(http.StatusBadRequest, gin.H{
+				"error": err.Error(),
+			})
+			return
+		}
+
+		_, err := universities.SaveCertificateFile(context, &certificateFileUpload)
+		if err != nil {
+			c.JSON(http.StatusBadRequest, gin.H{
+				"error": err.Error(),
+			})
+			return
+		}
+		c.JSON(http.StatusCreated, gin.H{})
+	}
+}
+
+// POST /api/universities/certificate-file/approve
+// @Tags universities
+// @Summary University approve a certificate file
+// @Description University approve a certificate file
+// @Accept json
+// @Produce json
+// @Param certificateFile body data.CertificateFileUpload true "Certificate file data"
+// @Success 201 {object} gin.H
+// @Failure 400 {object} gin.H
+// @Router /api/universities/certificate-file/approve [post]
+func ApproveCertificateFile(context *base.ApplicationContext) func(c *gin.Context) {
 	return func(c *gin.Context) {
 		var certificateFileUpload data.CertificateFileUpload
 		if err := c.ShouldBindJSON(&certificateFileUpload); err != nil {
@@ -120,6 +152,8 @@ func GetCertificatesNotOnChain(context *base.ApplicationContext) func(c *gin.Con
 			return
 		}
 		c.JSON(http.StatusOK, certs)
+	}
+}
 
 // GET /api/universities
 // @Tags universities
