# application/backend/certiblock/docs/swagger.json
@@ -351,7 +351,47 @@
                 }
             }
         },
-        "/api/universities/certificate-file": {
+        "/api/universities/certificate-file/approve": {
+            "post": {
+                "description": "Add a certificate file",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "universities"
+                ],
+                "summary": "Add a certificate file",
+                "parameters": [
+                    {
+                        "description": "Certificate file data",
+                        "name": "certificateFile",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/data.CertificateFileUpload"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/gin.H"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/universities/certificate-file/request": {
             "post": {
                 "description": "Add a certificate file",
                 "consumes": [
@@ -558,16 +598,28 @@
         "data.CertificateFileUpload": {
             "type": "object",
             "properties": {
-                "dateOfIssuing": {
+                "certUUID": {
+                    "type": "string"
+                },
+                "dateOfIssue": {
                     "type": "string"
                 },
                 "encodedFile": {
                     "type": "string"
                 },
+                "isOnChain": {
+                    "type": "boolean"
+                },
                 "studentPublicKey": {
                     "type": "string"
                 },
+                "studentSignature": {
+                    "type": "string"
+                },
                 "universityName": {
+                    "type": "string"
+                },
+                "universitySignature": {
                     "type": "string"
                 }
             }
